<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fieldsoft.lagrange.AddDataActivity" >
        
	<LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

	        <Button
	            android:id="@+id/Return"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="Return"
	            android:text="@string/Return" />

		</LinearLayout>

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right" >

			<Button
			    android:id="@+id/Enter"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:onClick="Enter"
			    android:text="@string/Enter" />
		</LinearLayout>

    </LinearLayout>
 

    <LinearLayout
        android:id="@+id/layout_buttom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
		android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
			
		    <TextView
               android:id="@+id/textView1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/X" />
            <EditText
                android:id="@+id/editTextX"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal" >
            </EditText>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Y" />
            <EditText
                android:id="@+id/editTextY"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal" />

		<Button
		    android:id="@+id/buttonInsert"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.2"
		    android:onClick="Insert"
		    android:text="@string/Insert" />
			
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
	            <Button
	                android:id="@+id/buttonLoad"
	                android:layout_width="0dp"
	                android:layout_weight="1"
	                android:layout_height="wrap_content"
	                android:onClick="OpenFile"
	                android:text="@string/Load" />
	            <Button
	                android:id="@+id/buttonSave"
	                android:layout_width="0dp"
	                android:layout_weight="1"
	                android:layout_height="wrap_content"
	                android:onClick="SaveFile"
	                android:text="@string/Save" />
	    	</LinearLayout>
	
            <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right" >
	            <Button
	                android:id="@+id/buttonAllSelect"
	                android:layout_width="0dp"
	                android:layout_weight="1"
	                android:layout_height="wrap_content"
	                android:onClick="AllSelect"
	                android:text="@string/AllSelect" />
	         	<Button
	                android:id="@+id/buttonDelete"
	                android:layout_width="0dp"
	                android:layout_weight="1"
	                android:layout_height="wrap_content"
	                android:onClick="Delete"
	                android:text="@string/Delete" />
	      	</LinearLayout>
        </LinearLayout>
    </LinearLayout>
    
    
	<ListView
		android:id="@+id/listViewData"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:layout_alignParentLeft="true"
        android:layout_below="@id/layout_top" 
        android:layout_above="@id/layout_buttom">
	</ListView>

</RelativeLayout>
