<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fieldsoft.lagrange.AddDataActivity" >
        
	<LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

	        <Button
	            android:id="@+id/Return"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="Return"
	            android:text="@string/Return" />

		</LinearLayout>

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right" >

			<Button
			    android:id="@+id/Enter"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:onClick="Enter"
			    android:text="@string/Enter" />
		</LinearLayout>

    </LinearLayout>
 

    <LinearLayout
        android:id="@+id/layout_buttom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
			
		    <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/X" />
            <EditText
                android:id="@+id/editTextX"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:inputType="numberDecimal" >
            </EditText>
    	</LinearLayout>
    	<LinearLayout
    	    android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Y" />
            <TextView
                android:id="@+id/TextViewY"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
			android:layout_width="fill_parent"
            android:layout_height="wrap_content">

			<Button
			    android:id="@+id/buttonCal"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:onClick="Cal"
			    android:text="@string/Cal" />
			
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
